--- a/technologies/gitlab-detect.yaml
+++ b/technologies/gitlab-detect.yaml
@@ -11,6 +11,10 @@ requests:
       - "{{BaseURL}}/users/sign_in"
       - "{{BaseURL}}/users/sign_up"
       - "{{BaseURL}}/explore"
+    redirects: true
+    max-redirects: 1
+    headers:
+      User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:55.0) Gecko/20100101 Firefox/55
     matchers:
       - type: word
         words:
